--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -282,8 +282,8 @@ nav.navbar.bootsnav .navbar-toggle i{color: #d92cf9;}
     background: rgba(31,44,108,.3);
 }
 .single-about-img img {
-    max-width: 500px;
-
+    max-width: 285px;
+    max-height: 500px;
 }
 .about-list-icon{
     display: flex;
